# throughProject

./: .gitignore  CMakeLists.txt  FileInfo.h  FileProcessor.cpp  FileProcessor.h  MagicWiget.cpp  MagicWiget.h  ProcessAndHandleFile.cpp  ProcessAndHandleFile.h  Reader.cpp  Reader.h  Solver.cpp  Solver.h  SolverType.h  TypeFile.h  Writer.cpp  Writer.h  exeptions.h  key.h  main.cpp  смех
tests/: testFileProcessor.cpp  testProcessAndHandle.cpp  testReaderAndWriter.cpp  testSolver.cpp
tools/: FindCatch.cmake
